[package]
name = "ploc-bvh"
version = "0.4.0"
description = "A Bounding Volume Hierarchy based on PLOC"
readme = "README.md"
keywords = [
    "bvh",
    "aabb",
    "bounding",
    "volume",
    "ploc",
]
categories = ["data-structures", "game-development"]

license = "MIT OR Apache-2.0"
repository = "https://github.com/NiseVoid/ploc-bvh"

edition = "2024"

[dependencies]
bevy_math = { version = "0.16.0", default-features = false, features=["nostd-libm"] }
radsort = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
bevy_math = { version = "0.16.0", default-features = false, features = ["std"] }
fastrand = "2.3"
criterion = { version = "0.5", default-features = false, features = [
  "cargo_bench_support",
] }

[[bench]]
name = "build"
harness = false
